# Youdao4R

./: Cargo.toml  README.md
src/: crawler.rs  credential.rs  language_type.rs  lib.rs  runtime.rs  translation.rs  translator.rs
