[package]
name = "youdao4r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["cookies"] }
tokio = { version = "1.24", features = ["rt-multi-thread"] }
regex = "1.6.0"
serde_urlencoded = "0.7"
rand = "0.8"
rust-crypto = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }